# pyxi

./: .clang-format  CMakeLists.txt  LICENSE  README.md  flake.nix  pyxi.hpp  test.cpp
